20231206 Finish training | wandb_export

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -17,6 +17,7 @@
     "import os, time, sys, argparse\n",
     "from itertools import product\n",
     "import matplotlib.pyplot as plt\n",
+    "from collections import defaultdict\n",
     "\n",
     "# model template\n",
     "import module_model\n",
@@ -65,28 +66,27 @@
    "outputs": [],
    "source": [
     "# global settings\n",
-    "config = {}\n",
+    "config = defaultdict(str)\n",
     "config[\"wandb\"]    = True # <-----------------------------------------------\n",
-    "# config[\"time\"]     = input(\"Specify a datetime or leave empty (default current time): \") or time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
-    "# config[\"device\"]   = input(\"Enter the computing device (4090, slurm, node, etc.)    : \")\n",
-    "# config[\"project\"]  = \"g_main\"\n",
-    "# config[\"suffix\"]   = \"\"\n",
-    "# config[\"rnd_seed\"] = int(input(\"Set random seed = \"))\n",
-    "# config[\"qdevice\"]     = \"default.qubit\"\n",
-    "# config[\"qbackend\"]    = \"\"\n",
-    "# config[\"diff_method\"] = \"best\"\n",
-    "\n",
-    "# test\n",
-    "config[\"time\"]     = \"20231123\"\n",
-    "config[\"device\"]   = \"4090\"\n",
+    "config[\"time\"]     = input(\"Specify a datetime or leave empty (default current time): \") or time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
+    "config[\"device\"]   = input(\"Enter the computing device (4090, slurm, node, etc.)    : \")\n",
     "config[\"project\"]  = \"g_main\"\n",
-    "config[\"suffix\"]   = \"qml_psr\"\n",
-    "config[\"rnd_seed\"] = 0\n",
+    "config[\"suffix\"]   = \"\"\n",
+    "config[\"rnd_seed\"] = int(input(\"Set random seed = \"))\n",
     "config[\"qdevice\"]     = \"default.qubit\"\n",
+    "config[\"qbackend\"]    = \"\"\n",
+    "config[\"diff_method\"] = \"best\"\n",
+    "\n",
+    "# test qiskit\n",
+    "# config[\"time\"]     = \"20231123\"\n",
+    "# config[\"device\"]   = \"4090\"\n",
+    "# config[\"project\"]  = \"g_main\"\n",
+    "# config[\"suffix\"]   = \"qml_psr\"\n",
+    "# config[\"rnd_seed\"] = 0\n",
     "# config[\"qdevice\"]     = \"qiskit.aer\"\n",
-    "config[\"qbackend\"]    = None\n",
-    "config[\"diff_method\"] = \"parameter-shift\"\n",
-    "config[\"use_qiskit_enc\"] = True\n",
+    "# config[\"qbackend\"]    = None\n",
+    "# config[\"diff_method\"] = \"parameter-shift\"\n",
+    "# config[\"use_qiskit_enc\"] = True\n",
     "\n",
     "# # parser (if needed)\n",
     "# parser = argparse.ArgumentParser(description='argparse for slurm')\n",
@@ -316,10 +316,12 @@
     "        logger_config = {}\n",
     "        logger_config[\"project\"]  = config[\"project\"]\n",
     "        logger_config[\"group\"]    = f\"{data_config['sig']}_{data_config['bkg']}\"\n",
+    "        if suffix != \"\":\n",
+    "            suffix = \"_\" + suffix\n",
     "        if \"qiskit\" in config['qdevice']:\n",
-    "            logger_config[\"name\"]     = f\"{model_config['group_rnd']} | {config['time']}_{config['qdevice']}_{config['rnd_seed']} {suffix}\"\n",
+    "            logger_config[\"name\"] = f\"{model_config['group_rnd']} | {config['time']}_{config['qdevice']}{suffix}_{config['rnd_seed']}\"\n",
     "        else:\n",
-    "            logger_config[\"name\"]     = f\"{model_config['group_rnd']} | {config['time']}_{config['device']}_{config['rnd_seed']} {suffix}\"\n",
+    "            logger_config[\"name\"] = f\"{model_config['group_rnd']} | {config['time']}_{config['device']}{suffix}_{config['rnd_seed']}\"\n",
     "        logger_config[\"id\"]       = logger_config[\"name\"]\n",
     "        logger_config[\"save_dir\"] = result_dir\n",
     "        logger = module_training.wandb_monitor(model, logger_config, config, model_config, data_config)\n",
@@ -359,8 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_config = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
-    "data_config = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
+    "data_config = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
+    "# data_config = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
     "# data_config = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":2}\n",
     "\n",
     "sig_fatjet_events = module_data.FatJetEvents(channel=data_config[\"sig\"], cut_pt=data_config[\"cut\"], subjet_radius=data_config[\"subjet_radius\"], num_pt_ptcs=data_config[\"num_pt_ptcs\"])\n",
@@ -385,10 +387,10 @@
     "\n",
     "    # QFCGNN\n",
     "    data_module   = JetDataModule(sig_events, bkg_events, graph=False)\n",
-    "    qidx, qnn     = int(np.ceil(np.log2(data_config[\"num_pt_ptcs\"]))), 3\n",
-    "    gl, gr        = 1, 3\n",
+    "    qidx, qnn     = int(np.ceil(np.log2(data_config[\"num_pt_ptcs\"]))), 9\n",
+    "    gl, gr        = 1, 9\n",
     "    model_suffix  = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
-    "    model_config  = {\"gnn_idx_qubits\":qidx, \"gnn_nn_qubits\":qnn, \"gnn_layers\":gl, \"gnn_reupload\":gr, \"lr\":1E-2, \"model_suffix\":model_suffix}\n",
+    "    model_config  = {\"gnn_idx_qubits\":qidx, \"gnn_nn_qubits\":qnn, \"gnn_layers\":gl, \"gnn_reupload\":gr, \"lr\":1E-3, \"model_suffix\":model_suffix}\n",
     "    model         = QuantumRotQCGNN(num_ir_qubits=qidx, num_nr_qubits=qnn, num_layers=gl, num_reupload=gr, device=config[\"qdevice\"], backend=config[\"qbackend\"], diff_method=config[\"diff_method\"])\n",
     "    train(model, model_config, data_module, data_config, graph=False, suffix=config[\"suffix\"])"
    ]
