--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -9,23 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import wandb\n",
+    "import wandb\n",
     "\n",
-    "# api     = wandb.Api()\n",
-    "# date    = \"20231122\"\n",
-    "# suffix  = \"\"\n",
-    "# project = \"g_main\"\n",
+    "api     = wandb.Api()\n",
+    "date    = \"test\"\n",
+    "suffix  = \"\"\n",
+    "project = \"g_main\"\n",
     "\n",
-    "# for run in api.runs(f\"ntuyianchen/{project}\"):\n",
-    "#     if date in run.id and suffix in run.id:\n",
-    "#         print(run.id)\n",
-    "#         # run.delete()\n",
-    "#     # elif run.id is None:\n",
-    "#     #     print(run.id)"
+    "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
+    "    if date in run.id and suffix in run.id:\n",
+    "        print(run.id)\n",
+    "        # run.delete()\n",
+    "    # elif run.id is None:\n",
+    "    #     print(run.id)"
    ]
   },
   {
@@ -69,132 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "----------------------------------------------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
@@ -204,27 +81,39 @@
     "project = \"g_main\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
-    "    print(100*\"-\")\n",
     "    if run.state == \"finished\":\n",
     "        # FCGNN -> QCGNN\n",
-    "        if \"QuantumRotFCGNN\" in run.config[\"id\"]:\n",
-    "            run.id   = run.id.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "            run.name = run.name.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "            run.config[\"id\"]         = run.config[\"id\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "            run.config[\"name\"]       = run.config[\"name\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "            run.config[\"group_rnd\"]  = run.config[\"group_rnd\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "            run.config[\"model_name\"] = \"QuantumRotQCGNN\"\n",
-    "            run.update()\n",
-    "            print(run.id)\n",
+    "        # if \"QuantumRotFCGNN\" in run.name:\n",
+    "        #     run.id   = run.id.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "        #     run.name = run.name.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "        #     run.config[\"id\"]         = run.config[\"id\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "        #     run.config[\"name\"]       = run.config[\"name\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "        #     run.config[\"group_rnd\"]  = run.config[\"group_rnd\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "        #     run.config[\"model_name\"] = \"QuantumRotQCGNN\"\n",
+    "        #     run.update()\n",
+    "        #     print(run.id)\n",
+    "        #     print(100*\"-\")\n",
+    "        \n",
     "        # Update null values of sig and bkg\n",
-    "        if \"sig\" not in run.config.keys():\n",
+    "        if \"sig\" not in run.config.keys() or \"abbrev\" not in run.config.keys():\n",
     "            if \"BB-QCD\" in run.id:\n",
-    "                run.config[\"sig\"] = \"VzToZhToVevebb\"\n",
+    "                run.config[\"sig\"]    = \"VzToZhToVevebb\"\n",
+    "                run.config[\"abbrev\"] = \"BB-QCD\"\n",
     "            elif \"TT-QCD\" in run.id:\n",
-    "                run.config[\"sig\"] = \"VzToTt\"\n",
+    "                run.config[\"sig\"]    = \"VzToTt\"\n",
+    "                run.config[\"abbrev\"] = \"TT-QCD\"\n",
     "            run.config[\"bkg\"] = \"VzToQCD\"\n",
     "            run.update()\n",
-    "            print(run.id)"
+    "            print(run.name)\n",
+    "            print(100*\"-\")\n",
+    "        \n",
+    "        # # remove \"_\" in last character if needed\n",
+    "        # if run.name[-1] == \"_\" or run.name[-1] == \" \":\n",
+    "        #     run.name = run.name[:-1]\n",
+    "        #     run.config[\"name\"] = run.config[\"name\"][:-1]\n",
+    "        #     run.update()\n",
+    "        #     print(run.id)\n",
+    "        #     print(100*\"-\")"
    ]
   }
  ],
