20231208 plot best classical

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -38,6 +38,9 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader as TorchDataLoader\n",
     "\n",
+    "import wandb\n",
+    "api = wandb.Api()\n",
+    "\n",
     "# pytorch_lightning\n",
     "import lightning as L\n",
     "import lightning.pytorch as pl\n",
@@ -71,8 +74,8 @@
     "config[\"time\"]     = input(\"Specify a datetime or leave empty (default current time): \") or time.strftime(\"%Y%m%d_%H%M%S\", time.localtime())\n",
     "config[\"device\"]   = input(\"Enter the computing device (4090, slurm, node, etc.)    : \")\n",
     "config[\"project\"]  = \"g_main\"\n",
-    "config[\"suffix\"]   = \"\"\n",
-    "config[\"rnd_seed\"] = int(input(\"Set random seed = \"))\n",
+    "config[\"suffix\"]   = input(\"suffix = \")\n",
+    "# config[\"rnd_seed\"] = int(input(\"Set random seed = \"))\n",
     "config[\"qdevice\"]     = \"default.qubit\"\n",
     "config[\"qbackend\"]    = \"\"\n",
     "config[\"diff_method\"] = \"best\"\n",
@@ -352,7 +355,9 @@
     "\n",
     "    # finish wandb monitoring\n",
     "    if config[\"wandb\"] == True:\n",
-    "        module_training.wandb_finish()"
+    "        module_training.wandb_finish()\n",
+    "\n",
+    "    return logger_config[\"id\"]"
    ]
   },
   {
@@ -361,14 +366,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_config = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
-    "# data_config = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
+    "# data_config = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
+    "data_config = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":8}\n",
     "# data_config = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":2}\n",
     "\n",
     "sig_fatjet_events = module_data.FatJetEvents(channel=data_config[\"sig\"], cut_pt=data_config[\"cut\"], subjet_radius=data_config[\"subjet_radius\"], num_pt_ptcs=data_config[\"num_pt_ptcs\"])\n",
     "bkg_fatjet_events = module_data.FatJetEvents(channel=data_config[\"bkg\"], cut_pt=data_config[\"cut\"], subjet_radius=data_config[\"subjet_radius\"], num_pt_ptcs=data_config[\"num_pt_ptcs\"])\n",
     "\n",
-    "for rnd_seed in range(1):\n",
+    "for rnd_seed in range(10):\n",
     "    config[\"rnd_seed\"] = rnd_seed\n",
     "    L.seed_everything(config[\"rnd_seed\"])\n",
     "    sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
@@ -376,23 +381,35 @@
     "    data_suffix = f\"{data_config['abbrev']}_cut{data_config['cut']}_ptc{data_config['num_pt_ptcs']}_bin{data_config['bin']}-{data_config['num_bin_data']}_R{data_config['subjet_radius']}\"\n",
     "    data_config[\"data_suffix\"] = data_suffix\n",
     "\n",
-    "    # # classical ML\n",
-    "    # data_module  = JetDataModule(sig_events, bkg_events, graph=True)\n",
-    "    # go, gh, gl   = 3, 3, 3\n",
-    "    # mh, ml       = 0, 0\n",
-    "    # model_suffix = f\"go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml}\"\n",
-    "    # model_config = {\"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":mh, \"mlp_layers\":ml, \"lr\":1E-3, \"model_suffix\":model_suffix}\n",
-    "    # model        = Classical2PCGNN(**model_config) \n",
-    "    # train(model, model_config, data_module, data_config, graph=True, suffix=config[\"suffix\"])\n",
+    "    # classical ML\n",
+    "    data_module  = JetDataModule(sig_events, bkg_events, graph=True)\n",
+    "    go, gh, gl   = 3, 3, 2\n",
+    "    mh, ml       = 0, 0\n",
+    "    model_suffix = f\"go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml}\"\n",
+    "    model_config = {\"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":mh, \"mlp_layers\":ml, \"lr\":1E-3, \"model_suffix\":model_suffix}\n",
+    "    model        = Classical2PCGNN(**model_config)\n",
+    "    \n",
+    "    # fix untrainable classical model\n",
+    "    run_id = train(model, model_config, data_module, data_config, graph=True, suffix=config[\"suffix\"])\n",
+    "    run    = api.run(f\"ntuyianchen/g_main/{run_id}\")\n",
+    "    while run.summary[\"valid_acc_epoch\"] < 0.60:\n",
+    "        run.delete()\n",
+    "        rnd_seed = rnd_seed + 10\n",
+    "        config[\"rnd_seed\"] = rnd_seed\n",
+    "        print(f\"\\n ModelLog: Reinitialize model with new rnd_seed = {rnd_seed}\\n\")\n",
+    "        L.seed_everything(rnd_seed)\n",
+    "        model  = Classical2PCGNN(**model_config)\n",
+    "        run_id = train(model, model_config, data_module, data_config, graph=True, suffix=config[\"suffix\"])\n",
+    "        run    = api.run(f\"ntuyianchen/g_main/{run_id}\")\n",
     "\n",
-    "    # QFCGNN\n",
-    "    data_module   = JetDataModule(sig_events, bkg_events, graph=False)\n",
-    "    qidx, qnn     = int(np.ceil(np.log2(data_config[\"num_pt_ptcs\"]))), 9\n",
-    "    gl, gr        = 1, 9\n",
-    "    model_suffix  = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
-    "    model_config  = {\"gnn_idx_qubits\":qidx, \"gnn_nn_qubits\":qnn, \"gnn_layers\":gl, \"gnn_reupload\":gr, \"lr\":1E-3, \"model_suffix\":model_suffix}\n",
-    "    model         = QuantumRotQCGNN(num_ir_qubits=qidx, num_nr_qubits=qnn, num_layers=gl, num_reupload=gr, device=config[\"qdevice\"], backend=config[\"qbackend\"], diff_method=config[\"diff_method\"])\n",
-    "    train(model, model_config, data_module, data_config, graph=False, suffix=config[\"suffix\"])"
+    "    # # QFCGNN\n",
+    "    # data_module   = JetDataModule(sig_events, bkg_events, graph=False)\n",
+    "    # qidx, qnn     = int(np.ceil(np.log2(data_config[\"num_pt_ptcs\"]))), 9\n",
+    "    # gl, gr        = 1, 9\n",
+    "    # model_suffix  = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
+    "    # model_config  = {\"gnn_idx_qubits\":qidx, \"gnn_nn_qubits\":qnn, \"gnn_layers\":gl, \"gnn_reupload\":gr, \"lr\":1E-3, \"model_suffix\":model_suffix}\n",
+    "    # model         = QuantumRotQCGNN(num_ir_qubits=qidx, num_nr_qubits=qnn, num_layers=gl, num_reupload=gr, device=config[\"qdevice\"], backend=config[\"qbackend\"], diff_method=config[\"diff_method\"])\n",
+    "    # train(model, model_config, data_module, data_config, graph=False, suffix=config[\"suffix\"])"
    ]
   }
  ],
