--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -9,18 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"test\"\n",
+    "date    = \"20231112\"\n",
     "suffix  = \"\"\n",
     "project = \"g_main\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
+    "    # if date in run.id and suffix in run.id:\n",
     "    if date in run.id and suffix in run.id:\n",
     "        print(run.id)\n",
     "        # run.delete()\n",
