20231216  Add JSON, csv,ckpt

--- a/result_ckpt.ipynb
+++ b/result_ckpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,63 +11,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Classical"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for directory in os.listdir(\"result/g_main\"):\n",
-    "    if \"Classical\" in directory and \"20231110\" in directory:\n",
-    "        # get rnd seed\n",
-    "        dir_split = directory.split()\n",
-    "        suffix    = dir_split[-1] if \"20231110\" in dir_split[-1] else dir_split[-2]\n",
-    "        rnd_seed  = suffix[-1] if suffix[-1] != \"_\" else suffix[-2]\n",
-    "        # get epoch 30 ckpt\n",
-    "        ckpt_path = os.path.join(\"result/g_main\", directory, \"checkpoints\")\n",
-    "        ckpt_file = os.listdir(ckpt_path)[0]\n",
-    "        if \"29\" in ckpt_file:\n",
-    "            dst_name = directory.split()\n",
-    "            dst_name = dst_name[0] + \"_\" + dst_name[2] + dst_name[3]\n",
-    "            src = os.path.join(ckpt_path, ckpt_file)\n",
-    "            dst = os.path.join(\"QCGNN_ckpt\", dst_name + f\"_{rnd_seed}.ckpt\")\n",
-    "            shutil.copyfile(src, dst)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### QCGNN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for directory in os.listdir(\"QCGNN_result\"):\n",
-    "    # get rnd seed\n",
-    "    dir_split = directory.split()\n",
-    "    suffix    = dir_split[-1] if \"2023\" in dir_split[-1] else dir_split[-2]\n",
-    "    rnd_seed  = suffix[-1] if suffix[-1] != \"_\" else suffix[-2]\n",
-    "    # get epoch 30 ckpt\n",
-    "    ckpt_path = os.path.join(\"QCGNN_result\", directory, \"checkpoints\")\n",
+    "dir_path = \"./ckpt\"\n",
+    "for f in os.listdir(dir_path):\n",
+    "    src = os.path.join(dir_path, f)\n",
+    "    \n",
+    "    # remove last character like \" \" or \"_\"\n",
+    "    if f[-1] not in [str(i) for i in range(10)]:\n",
+    "        if f[-1] not in [\" \", \"_\"]:\n",
+    "            print(f\"Delete {f}\")\n",
+    "            shutil.rmtree(src)\n",
+    "            continue\n",
+    "        else:\n",
+    "            print(f)\n",
+    "            dst = src[:-1]\n",
+    "            os.rename(src, dst)\n",
+    "            src = dst\n",
+    "\n",
+    "    # remove test files\n",
+    "    if \"test\" in f:\n",
+    "        print(f)\n",
+    "        shutil.rmtree(src)\n",
+    "        continue\n",
+    "    \n",
+    "    # FCGNN -> QCGNN\n",
+    "    if \"QuantumRotFCGNN\" in f:\n",
+    "        print(src)\n",
+    "        dst = src.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "        os.rename(src, dst)\n",
+    "        src = dst\n",
+    "\n",
+    "    # check epoch 30\n",
+    "    ckpt_path = os.path.join(src, \"checkpoints\")\n",
     "    ckpt_file = os.listdir(ckpt_path)[0]\n",
-    "    if \"29\" in ckpt_file:\n",
-    "        dst_name = directory.split()\n",
-    "        dst_name = dst_name[0] + \"_\" + dst_name[2] + dst_name[3]\n",
-    "        dst_name = dst_name.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "        src = os.path.join(ckpt_path, ckpt_file)\n",
-    "        dst = os.path.join(\"QCGNN_ckpt\", dst_name + f\"_{rnd_seed}.ckpt\")\n",
-    "        shutil.copyfile(src, dst)"
+    "    if \"epoch=29\" not in ckpt_file:\n",
+    "        print(f, ckpt_file)\n",
+    "        shutil.rmtree(src)\n",
+    "        continue"
    ]
   }
  ],
