--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20231112\"\n",
+    "date    = \"20231206\"\n",
     "suffix  = \"\"\n",
     "project = \"g_main\"\n",
     "\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,29 +84,31 @@
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    if run.state == \"finished\":\n",
     "        # FCGNN -> QCGNN\n",
-    "        # if \"QuantumRotFCGNN\" in run.name:\n",
-    "        #     run.id   = run.id.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "        #     run.name = run.name.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "        #     run.config[\"id\"]         = run.config[\"id\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "        #     run.config[\"name\"]       = run.config[\"name\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "        #     run.config[\"group_rnd\"]  = run.config[\"group_rnd\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
-    "        #     run.config[\"model_name\"] = \"QuantumRotQCGNN\"\n",
-    "        #     run.update()\n",
-    "        #     print(run.id)\n",
-    "        #     print(100*\"-\")\n",
-    "        \n",
-    "        # Update null values of sig and bkg\n",
-    "        if \"sig\" not in run.config.keys() or \"abbrev\" not in run.config.keys():\n",
-    "            if \"BB-QCD\" in run.id:\n",
-    "                run.config[\"sig\"]    = \"VzToZhToVevebb\"\n",
-    "                run.config[\"abbrev\"] = \"BB-QCD\"\n",
-    "            elif \"TT-QCD\" in run.id:\n",
-    "                run.config[\"sig\"]    = \"VzToTt\"\n",
-    "                run.config[\"abbrev\"] = \"TT-QCD\"\n",
-    "            run.config[\"bkg\"] = \"VzToQCD\"\n",
+    "        # name_before, name_after = \"QuantumRotFCGNN\", \"QuantumRotQCGNN\"\n",
+    "        name_before, name_after = \"Classical2PCGNN\", \"ClassicalMPGNN\"\n",
+    "        if name_before in run.name:\n",
+    "            run.id   = run.id.replace(name_before, name_after)\n",
+    "            run.name = run.name.replace(name_before, name_after)\n",
+    "            run.config[\"id\"]         = run.config[\"id\"].replace(name_before, name_after)\n",
+    "            run.config[\"name\"]       = run.config[\"name\"].replace(name_before, name_after)\n",
+    "            run.config[\"group_rnd\"]  = run.config[\"group_rnd\"].replace(name_before, name_after)\n",
+    "            run.config[\"model_name\"] = name_after\n",
     "            run.update()\n",
-    "            print(run.name)\n",
+    "            print(run.id)\n",
     "            print(100*\"-\")\n",
+    "        \n",
+    "        # # Update null values of sig and bkg\n",
+    "        # if \"sig\" not in run.config.keys() or \"abbrev\" not in run.config.keys():\n",
+    "        #     if \"BB-QCD\" in run.id:\n",
+    "        #         run.config[\"sig\"]    = \"VzToZhToVevebb\"\n",
+    "        #         run.config[\"abbrev\"] = \"BB-QCD\"\n",
+    "        #     elif \"TT-QCD\" in run.id:\n",
+    "        #         run.config[\"sig\"]    = \"VzToTt\"\n",
+    "        #         run.config[\"abbrev\"] = \"TT-QCD\"\n",
+    "        #     run.config[\"bkg\"] = \"VzToQCD\"\n",
+    "        #     run.update()\n",
+    "        #     print(run.name)\n",
+    "        #     print(100*\"-\")\n",
     "        \n",
     "        # # remove \"_\" in last character if needed\n",
     "        # if run.name[-1] == \"_\" or run.name[-1] == \" \":\n",
